--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,13 +10,18 @@
     "lint": "eslint \"src/**/*.ts\""
   },
   "dependencies": {
-    "@repo/ui": "*"
+    "@repo/ui": "*",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
+    "@rollup/plugin-replace": "^5.0.7",
+    "@types/node": "^22.5.0",
     "eslint": "^8.57.0",
     "typescript": "^5.3.3",
-    "vite": "^5.1.4"
+    "vite": "^5.1.4",
+    "vite-plugin-env-compatible": "^2.0.1"
   }
 }
